--- a/index.html
+++ b/index.html
@@ -155,23 +155,24 @@
           <div class="top-header">
               <h1>Projectos</h1>
           </div>
-          <div class="project-container">
-            <div class="project-box">
-                <i class="uil uil-briefcase-alt"></i>
-                <h3>Completado</h3>
-                <label>15+ Finished Projects</label>
-            </div>
-            <div class="project-box">
-                <i class="uil uil-users-alt"></i>
-                <h3>Clientes</h3>
-                <label>25+ Happy Clients</label>
-            </div>
-            <div class="project-box">
-                <i class="uil uil-award"></i>
-                <h3>Experiencia</h3>
-                <label>7+ Years in the field</label>
-            </div>
-          </div>
+         <div class="project-container">
+    <div class="project-box" data-url="https://sites.google.com/view/coffe-shop123/p%C3%A1gina-principal">
+        <i class="uil uil-briefcase-alt"></i>
+        <h3>Coffe Shop</h3>
+        <label>Donde el cafe y la compañia siempre son bienvenidos</label>
+    </div>
+    <div class="project-box" data-url="https://example.com/project2">
+        <i class="uil uil-users-alt"></i>
+        <h3>Clients</h3>
+        <label>25+ Happy Clients</label>
+    </div>
+    <div class="project-box" data-url="https://example.com/project3">
+        <i class="uil uil-award"></i>
+        <h3>Experience</h3>
+        <label>7+ Years in the field</label>
+    </div>
+</div>
+
        </section>
 
        <!-- -------------- CONTACT BOX ---------------- -->
